k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gochat-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gochat-frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: gochat-api-service
                port:
                  number: 80
          - path: /socket.io
            pathType: ImplementationSpecific
            backend:
              service:
                name: gochat-ws-service
                port:
                  number: 3000
